feature: enable authorize on gateway